# shotmaker

./: .gitignore  README.md  pyproject.toml
shotmaker/: __init__.py  data_converters.py  default_prompt.txt  evaluation.py  prompt_engine.py  serialization.py
